--- a/BlogAppication/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/BlogAppication/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
