--- a/BlogAppication/BlogAppication/appsettings.json
+++ b/BlogAppication/BlogAppication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=my_host;Database=my_db;Username=my_user;Password=my_pw"
+    "DefaultConnection": "Host=localhost;Database=BlogBase;Username=postgres;Password=1"
   },
   "Logging": {
     "LogLevel": {
